--- a/ad-sucelje/src/components/topbar/topbar.css
+++ b/ad-sucelje/src/components/topbar/topbar.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 50px;
   background-color: white;
+  position: sticky;
+  top: 0;
 }
 
 .topbarWrapper {
@@ -20,33 +22,40 @@
 }
 
 .topbarIconContainer {
-    position: relative;
+  position: relative;
 }
 
 .topIconShield {
-    width: 15px;
-    height: 15px;
-    position: absolute;
-    top: -5px;
-    right: 0px;
-    background-color: red;
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 15px;
-    font-weight: bold;
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: -5px;
+  right: 0px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .topRight {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .topbarIconContainer {
-    position: relative;
-    cursor: pointer;
-    margin-right: 10px;
-    color: grey;
+  position: relative;
+  cursor: pointer;
+  margin-right: 10px;
+  color: grey;
+}
+
+.profilePicture img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
 }
